--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,30 @@
   align-items: center;
   height: 100vh; 
   font-weight: 900;
+  display: flex;
+  flex-direction: column;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-container button {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-container button:hover {
+  background-color: #0056b3;
+}
+
+.btn-container button.selected {
+  background-color: #0056b3;
 }
